# sr-neo

./: .gitignore  Cargo.toml  README.md  build.rs
shaders/: colored_triangle_mesh.frag  depth_pre_pass.frag  depth_pre_pass.vert  forward_pass.frag  forward_pass.vert  fxaa_pass.frag  geometry_pass.frag  geometry_pass.vert  gradient.comp  gradient_color.comp  lightning_pass.frag  lightning_pass.vert  mesh.frag  mesh.vert  shadow_map_pass.vert  tex_image.frag
shaders/includes/: input_structures.glsl  pbr.glsl  scene_data.glsl
src/: allocations.rs  buffers.rs  camera.rs  default_pass.rs  default_resources.rs  deletion_queue.rs  depth_pre_pass.rs  descriptors.rs  double_buffer.rs  draw.rs  forward_pass.rs  fxaa_pass.rs  geometry_pass.rs  gltf_loader.rs  images.rs  immediate_submit.rs  lightning_pass.rs  main.rs  materials.rs  meshes.rs  pipeline_builder.rs  renderpass_common.rs  resource_manager.rs  shader_manager.rs  shadow_map_pass.rs  swapchain.rs  vk_init.rs  vk_util.rs  vulkan_engine.rs
