[package]
name = "srneo"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = {version = "0.38.0", features = ["linked"]}
ash-window = "0.13.0"
winit = "0.30.9"

[lints.clippy]
pedantic = {level = "warn", priority = 0}
cast_possible_truncation = {level = "allow", priority = 1}
cast_precision_loss = {level = "allow", priority = 1}